# Smart-Meeting-Assistant-for-Discord

./: README.md
audio-us-backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
audio-us-backend/.github/workflows/: cicd.yaml
audio-us-backend/cmd/api/: api.go  errors.go  handlers.go  health.go  json.go  main.go  records.go  records_test.go
audio-us-backend/deploy/: service.yaml
audio-us-backend/internal/auth/: discord.go  middleware.go
audio-us-backend/internal/store/: records.go  storage.go
audio-us-backend/internal/websocket/: websocket.go
audio-us-discord-bot/: .gitignore  kientruc.txt  pyproject.toml
audio-us-discord-bot/discord_recording_bot/: README.md  bot.py  costum_pycord.py  ngrok_url.txt
audio-us-discord-bot/whisper_streaming_custom/: online_asr.py
audio-us-discord-bot/whisper_test_colab/: whisper_test.ipynb
audio-us-front-end/: package-lock.json  package.json  tailwind.config.mjs
audio-us-front-end/src/app/: globals.css  layout.tsx
audio-us-front-end/src/components/: Ai_Agent.tsx  ChatRoom.tsx  DiscordLoginStyled.tsx  Footer.tsx  Header.tsx  LoginBox.tsx  Message.tsx
audio-us-front-end/src/context/: FooterVisibilityContext.tsx  ModalContext.tsx
audio-us-model/: .dockerignore  .gitignore  Dockerfile_cpu  Dockerfile_gpu  Makefile  README.md  docker-compose.yml  pyproject.toml  run_audio_model.py
audio-us-model/.github/workflows/: cicd.yaml
audio-us-model/whisperlivekit/: model_server.py
audio-us-model/whisperlivekit/whisper_streaming_custom/: online_asr.py  whisper_online.py
(+11 files in other folders)
